--- a/crawler4j/pom.xml
+++ b/crawler4j/pom.xml
@@ -102,6 +102,11 @@
 	<dependencies>
 
     <!-- Compile time Dependencies -->
+	<dependency>
+        <groupId>edu.uci.ics</groupId>
+        <artifactId>crawler4j</artifactId>
+        <version>4.2</version>
+    </dependency>
     <dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-api</artifactId>
